--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "airbnb-style",
+  "name": "eslint-config-iheartradio",
   "version": "2.0.0",
   "description": "A mostly reasonable approach to JavaScript.",
   "main": "packages/eslint-config-airbnb/index.js",
