--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-config-iheartradio",
-  "version": "2.0.0",
+  "version": "2.1.0",
   "description": "A mostly reasonable approach to JavaScript.",
   "main": "packages/eslint-config-airbnb/index.js",
   "scripts": {
@@ -16,7 +16,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/airbnb/javascript.git"
+    "url": "https://github.com/iheartradio/javascript.git"
   },
   "keywords": [
     "style guide",
